# my_rpg_2017

./: CMakeLists.txt  Makefile  README.md
include/: rpg.h
map/: text_0  text_1  text_10  text_13  text_14  text_15  text_17  text_18  text_21  text_22  text_4  text_5  text_6  text_7  text_8  text_9
saves/: azertyuio  cc  demo  louis
src/: button_is_clicked.c  change_letter_game.c  change_map_with_save.c  check_button_ng.c  check_button_pause.c  check_save.c  choice_character.c  clean_str.c  close_game.c  convert_int_str.c  create_end.c  create_fight.c  create_game.c  create_init_menu.c  create_intro.c  create_load.c  create_menu.c  destroy_rpg.c  destroy_scene.c  end_game.c  event.c  event_end.c  event_fight.c  event_init_menu.c  event_intro.c  event_load.c  event_menu.c  event_quit.c  event_tuto.c  fight_game.c  found_letter.c  free_map.c  game.c  get_save.c  init_button.c  init_end.c  init_fight.c  init_game.c  init_menu_game.c  init_mob.c  (+40 more)
src/file/: get_from_file.c  parse_file.c
