cmake_minimum_required(VERSION 3.13)
project(my_rpg_2017 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)

add_executable(my_rpg_2017
        include/rpg.h
        src/file/get_from_file.c
        src/file/parse_file.c
        src/button_is_clicked.c
        src/change_letter_game.c
        src/change_map_with_save.c
        src/check_button_ng.c
        src/check_button_pause.c
        src/check_save.c
        src/choice_character.c
        src/clean_str.c
        src/close_game.c
        src/convert_int_str.c
        src/create_end.c
        src/create_fight.c
        src/create_game.c
        src/create_init_menu.c
        src/create_intro.c
        src/create_load.c
        src/create_menu.c
        src/destroy_rpg.c
        src/destroy_scene.c
        src/end_game.c
        src/event.c
        src/event_end.c
        src/event_fight.c
        src/event_init_menu.c
        src/event_intro.c
        src/event_load.c
        src/event_menu.c
        src/event_quit.c
        src/event_tuto.c
        src/fight_game.c
        src/found_letter.c
        src/free_map.c
        src/game.c
        src/get_save.c
        src/init_button.c
        src/init_end.c
        src/init_fight.c
        src/init_game.c
        src/init_menu_game.c
        src/init_mob.c
        src/init_song.c
        src/init_spr_txt.c
        src/init_text.c
        src/intro_game.c
        src/load_game.c
        src/main.c
        src/maj_map.c
        src/menu_game.c
        src/move_background_intro.c
        src/move_particle.c
        src/move_rect.c
        src/movement_bird.c
        src/movement_map.c
        src/movement_player.c
        src/my_arraylen.c
        src/my_destroy_im.c
        src/my_free.c
        src/my_getnbr.c
        src/my_puterror.c
        src/my_rpg.c
        src/my_strcat.c
        src/my_strcmp.c
        src/my_strcpy.c
        src/my_strdup.c
        src/my_strlen.c
        src/my_strncmp.c
        src/pt_map.c
        src/refresh_end.c
        src/refresh_fight.c
        src/refresh_game.c
        src/refresh_init_menu.c
        src/refresh_intro.c
        src/refresh_load.c
        src/refresh_menu.c
        src/refresh_tuto.c
        src/status_end.c
        src/status_intro.c
        src/str_to_word_array.c
        src/tuto_game.c
        src/write_in_file.c)
